# docker-monitoring

./: .gitignore  README.md  pyproject.toml
src/docker-monitoring/: __main__.py  container_observer.py
src/docker_monitoring/: container_observer.py
