[project]
name = "docker_monitoring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "requests>=2.32.4",
]

[project.scripts]
docker_monitoring = "docker_monitoring.__main__:main"

[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
docker-monitoring = { workspace = true }

[dependency-groups]
dev = [
    "docker-monitoring",
]
